qt6/webengine/gen_qwebenginenavigationrequest.h

class QMetaObject;
class QUrl;
class QWebEngineNavigationRequest;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWebEngineNavigationRequest QWebEngineNavigationRequest;
QMetaObject* QWebEngineNavigationRequest_metaObject(const QWebEngineNavigationRequest* self);
void* QWebEngineNavigationRequest_metacast(QWebEngineNavigationRequest* self, const char* param1);
int QWebEngineNavigationRequest_metacall(QWebEngineNavigationRequest* self, int param1, int param2, void** param3);
struct miqt_string QWebEngineNavigationRequest_tr(const char* s);
QUrl* QWebEngineNavigationRequest_url(const QWebEngineNavigationRequest* self);
bool QWebEngineNavigationRequest_isMainFrame(const QWebEngineNavigationRequest* self);
int QWebEngineNavigationRequest_navigationType(const QWebEngineNavigationRequest* self);
void QWebEngineNavigationRequest_accept(QWebEngineNavigationRequest* self);
void QWebEngineNavigationRequest_reject(QWebEngineNavigationRequest* self);
void QWebEngineNavigationRequest_actionChanged(QWebEngineNavigationRequest* self);
void QWebEngineNavigationRequest_connect_actionChanged(QWebEngineNavigationRequest* self, intptr_t slot);
struct miqt_string QWebEngineNavigationRequest_tr2(const char* s, const char* c);
struct miqt_string QWebEngineNavigationRequest_tr3(const char* s, const char* c, int n);
const QMetaObject* QWebEngineNavigationRequest_staticMetaObject();
void QWebEngineNavigationRequest_delete(QWebEngineNavigationRequest* self);